<?xml version="1.0"?>
<package format="2">
  <name>global_planner_test</name>
  <version>0.0.0</version>
  <description>The global_planner_test package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="sgtubunamr@todo.todo">sgtubunamr</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>nav_core</build_depend>


  <build_export_depend>roscpp</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>angles</exec_depend>
  <exec_depend>nav_core</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <nav_core plugin="${prefix}/global_planner_plugin.xml" />
  </export>
</package>
